--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "s3-writeable",
-  "version": "1.0.2",
+  "name": "@seedalpha/s3-writeable",
+  "version": "1.0.12",
   "description": "Write to S3 using streams (via multipart upload)",
   "main": "index.js",
   "scripts": {
@@ -24,13 +24,13 @@
   "homepage": "https://github.com/seedalpha/s3-writeable",
   "devDependencies": {
     "mocha": "^2.2.1",
-    "s3-readable": "^1.0.0"
+    "@seedalpha/s3-readable": "^1.0.11"
   },
   "dependencies": {
     "debug": "^2.1.3",
     "head-stream": "0.0.4",
-    "rebuffer": "^1.0.1",
     "through2": "^0.6.3",
-    "throughout": "0.0.0"
+    "throughout": "0.0.0",
+    "@seedalpha/rebuffer": "^1.0.11"
   }
 }
